# CPU-Only-RAG-with-Adaptive-Context-Budgeting

./: .gitignore  README.md  pyproject.toml
cache/: README.md
configs/: README.md  base.yaml
configs/legacy_acbsc_eval/: hotpot_agnostic_acb_sc_full7405_p4.yaml
data/: README.md
models/: README.md
scripts/: acb_v2_gate.py  autotune.py  benchmark_suite.py  build_representative_pool.py  deep_per_query_analysis.py  full_pipeline.py  prewarm_hotpot_full.py  prompt_ablation.py  query_local.py  run_beir.py  run_pool_v1_matrix.py  run_stage2_paired.py  subset_eval.py
scripts/agnostic_cpu_rag/: audit_core_agnosticity.py  build_task_family_pools.py  compare_prefill_tracking.py  compare_runs.py  component_parity_matrix.py  derive_fixed_cap_override.py  derive_task_family_weights.py  export_controller_cache.py  guard_activation_breakdown.py  normalize_legacy_run.py  paired_bootstrap_ci.py  run_benchmark.py  run_extras_report.py  run_holdout_batches.sh  run_phase_p3_p6.sh  run_task_family_weight_campaign.sh  select_task_family_weight_winners.py  wait_then_run_p3_p6.sh
scripts/legacy_acbsc/: analyze_acbsc_temporal.py  build_full_eval_assets.py  build_probe_assets.py  compare_controller_eval.py  compare_large_eval.py  compare_probe_runs.py  run_probe_jobs.sh
src/agnostic_cpu_rag/: __init__.py  config.py  context_controller.py  evaluation.py  model_registry.py  pipeline.py  records.py  utils.py  weight_search.py
src/rag_cpu/: __init__.py  autotune.py  benchmark.py  benchmark_suite.py  chunking.py  config.py  context_budgeting.py  data.py  generator.py  ingest.py  (+9 more)
(+12 files in other folders)
