[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-cpu-qwen3b"
version = "0.1.0"
description = "CPU-only RAG system with Qwen 3B and rigorous benchmarking/autotuning"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{name = "Alberto + Codex"}]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "datasets>=2.18",
  "sentence-transformers>=3.0",
  "rank-bm25>=0.2.2",
  "llama-cpp-python>=0.3.7",
  "beir>=2.0.0",
  "tabulate>=0.9.0",
  "psutil>=5.9",
  "matplotlib>=3.8,<4",
  "rich>=13.7,<15",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
